# coverage_mission_pipeline

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: swarm_mission.example.yaml
coverage_mission_pipeline/: __init__.py  ardupilot_mission.py  complete_vehicle_route_record.py  generic_mission_pipeline.py  mission_geometry_core.py  plan_coverage_smoke_client.py  planning_request.py  planning_result.py  prepared_component.py  ros_plan_coverage_conversion.py  ros_polygon_conversion.py  route_connector.py  route_record.py  sequential_plan_coverage_client.py  start_goal_policy.py  swarm_mission_cli.py  swarm_mission_config.py  swarm_partitions_adapter.py  vehicle_component_ordering.py  vehicle_route_assembly.py
test/: test_ardupilot_mission.py  test_complete_vehicle_route_record.py  test_generic_mission_pipeline.py  test_mission_geometry_core.py  test_plan_coverage_smoke_client.py  test_planning_request.py  test_planning_result.py  test_prepared_component.py  test_ros_plan_coverage_conversion.py  test_ros_polygon_conversion.py  test_route_connector.py  test_route_record.py  test_sequential_plan_coverage_client.py  test_start_goal_policy.py  test_swarm_mission_cli.py  test_swarm_mission_config.py  test_swarm_partitions_adapter.py  test_vehicle_component_ordering.py  test_vehicle_route_assembly.py
