<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
           schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coverage_mission_pipeline</name>
  <version>0.1.0</version>
  <description>
    Geometry preparation and mission orchestration for polygon coverage planning.
  </description>

  <maintainer email="sidkakroo770@users.noreply.github.com">
    sidkakroo770
  </maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>python3-pyproj</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>polygon_coverage_msgs</exec_depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
